Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON declarations block DOT
Rule 2     declarations -> declaration_list
Rule 3     declarations -> empty
Rule 4     declaration_list -> declaration
Rule 5     declaration_list -> declaration_list declaration
Rule 6     declaration -> VAR var_decl_list
Rule 7     declaration -> function_decl
Rule 8     function_decl -> FUNCTION ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON
Rule 9     param_list -> param
Rule 10    param_list -> param_list SEMICOLON param
Rule 11    param -> id_list COLON type
Rule 12    var_decl_list -> var_decl_list var_decl
Rule 13    var_decl_list -> var_decl
Rule 14    var_decl -> id_list COLON type SEMICOLON
Rule 15    id_list -> ID
Rule 16    id_list -> id_list COMMA ID
Rule 17    type -> base_type
Rule 18    type -> array_type
Rule 19    base_type -> INTEGER
Rule 20    base_type -> BOOLEAN
Rule 21    base_type -> STRING_TYPE
Rule 22    base_type -> REAL_TYPE
Rule 23    array_type -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF base_type
Rule 24    block -> BEGIN statement_list END
Rule 25    statement_list -> statement
Rule 26    statement_list -> statement_list SEMICOLON statement
Rule 27    statement -> assignment
Rule 28    statement -> if_statement
Rule 29    statement -> while_statement
Rule 30    statement -> for_statement
Rule 31    statement -> write_statement
Rule 32    statement -> read_statement
Rule 33    statement -> block
Rule 34    statement -> empty
Rule 35    assignment -> ID ASSIGN expression
Rule 36    if_statement -> IF expression THEN statement
Rule 37    if_statement -> IF expression THEN statement ELSE statement
Rule 38    while_statement -> WHILE expression DO statement
Rule 39    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 40    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 41    write_statement -> WRITE LPAREN write_args RPAREN
Rule 42    write_statement -> WRITELN LPAREN write_args RPAREN
Rule 43    write_args -> expression
Rule 44    write_args -> write_args COMMA expression
Rule 45    read_statement -> READLN LPAREN expression RPAREN
Rule 46    expression -> expression_bool
Rule 47    expression_bool -> expression_rel
Rule 48    expression_bool -> expression_rel EQ expression_rel
Rule 49    expression_bool -> expression_rel NE expression_rel
Rule 50    expression_bool -> expression_rel LT expression_rel
Rule 51    expression_bool -> expression_rel LE expression_rel
Rule 52    expression_bool -> expression_rel GT expression_rel
Rule 53    expression_bool -> expression_rel GE expression_rel
Rule 54    expression_rel -> expression_add
Rule 55    expression_rel -> expression_rel OR expression_add
Rule 56    expression_add -> expression_mul
Rule 57    expression_add -> expression_add PLUS expression_mul
Rule 58    expression_add -> expression_add MINUS expression_mul
Rule 59    expression_mul -> expression_factor
Rule 60    expression_mul -> expression_mul TIMES expression_factor
Rule 61    expression_mul -> expression_mul DIVIDE expression_factor
Rule 62    expression_mul -> expression_mul DIV expression_factor
Rule 63    expression_mul -> expression_mul MOD expression_factor
Rule 64    expression_mul -> expression_mul AND expression_factor
Rule 65    expression_factor -> NUMBER
Rule 66    expression_factor -> REAL
Rule 67    expression_factor -> STRING_LITERAL
Rule 68    expression_factor -> TRUE
Rule 69    expression_factor -> FALSE
Rule 70    expression_factor -> ID
Rule 71    expression_factor -> ID LBRACKET expression RBRACKET
Rule 72    expression_factor -> ID LPAREN expression_list RPAREN
Rule 73    expression_factor -> LPAREN expression RPAREN
Rule 74    expression_factor -> MINUS expression_factor
Rule 75    expression_factor -> NOT expression_factor
Rule 76    expression_list -> expression
Rule 77    expression_list -> expression_list COMMA expression
Rule 78    empty -> <empty>

Terminals, with rules where they appear

AND                  : 64
ARRAY                : 23
ASSIGN               : 35 39 40
BEGIN                : 24
BOOLEAN              : 20
COLON                : 8 11 14
COMMA                : 16 44 77
DIV                  : 62
DIVIDE               : 61
DO                   : 38 39 40
DOT                  : 1
DOTDOT               : 23
DOWNTO               : 40
ELSE                 : 37
END                  : 24
EQ                   : 48
FALSE                : 69
FOR                  : 39 40
FUNCTION             : 8
GE                   : 53
GT                   : 52
ID                   : 1 8 15 16 35 39 40 70 71 72
IF                   : 36 37
INTEGER              : 19
LBRACKET             : 23 71
LE                   : 51
LPAREN               : 8 41 42 45 72 73
LT                   : 50
MINUS                : 58 74
MOD                  : 63
NE                   : 49
NOT                  : 75
NUMBER               : 23 23 65
OF                   : 23
OR                   : 55
PLUS                 : 57
PROGRAM              : 1
RBRACKET             : 23 71
READLN               : 45
REAL                 : 66
REAL_TYPE            : 22
RPAREN               : 8 41 42 45 72 73
SEMICOLON            : 1 8 8 10 14 26
STRING_LITERAL       : 67
STRING_TYPE          : 21
THEN                 : 36 37
TIMES                : 60
TO                   : 39
TRUE                 : 68
VAR                  : 6
WHILE                : 38
WRITE                : 41
WRITELN              : 42
error                : 

Nonterminals, with rules where they appear

array_type           : 18
assignment           : 27
base_type            : 8 17 23
block                : 1 8 33
declaration          : 4 5
declaration_list     : 2 5
declarations         : 1 8
empty                : 3 34
expression           : 35 36 37 38 39 39 40 40 43 44 45 71 73 76 77
expression_add       : 54 55 57 58
expression_bool      : 46
expression_factor    : 59 60 61 62 63 64 74 75
expression_list      : 72 77
expression_mul       : 56 57 58 60 61 62 63 64
expression_rel       : 47 48 48 49 49 50 50 51 51 52 52 53 53 55
for_statement        : 30
function_decl        : 7
id_list              : 11 14 16
if_statement         : 28
param                : 9 10
param_list           : 8 10
program              : 0
read_statement       : 32
statement            : 25 26 36 37 37 38 39 40
statement_list       : 24 26
type                 : 11 14
var_decl             : 12 13
var_decl_list        : 6 12
while_statement      : 29
write_args           : 41 42 44
write_statement      : 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON declarations block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON declarations block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON declarations block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . declarations block DOT
    (2) declarations -> . declaration_list
    (3) declarations -> . empty
    (4) declaration_list -> . declaration
    (5) declaration_list -> . declaration_list declaration
    (78) empty -> .
    (6) declaration -> . VAR var_decl_list
    (7) declaration -> . function_decl
    (8) function_decl -> . FUNCTION ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    BEGIN           reduce using rule 78 (empty -> .)
    VAR             shift and go to state 9
    FUNCTION        shift and go to state 11

    declarations                   shift and go to state 5
    declaration_list               shift and go to state 6
    empty                          shift and go to state 7
    declaration                    shift and go to state 8
    function_decl                  shift and go to state 10

state 5

    (1) program -> PROGRAM ID SEMICOLON declarations . block DOT
    (24) block -> . BEGIN statement_list END

    BEGIN           shift and go to state 13

    block                          shift and go to state 12

state 6

    (2) declarations -> declaration_list .
    (5) declaration_list -> declaration_list . declaration
    (6) declaration -> . VAR var_decl_list
    (7) declaration -> . function_decl
    (8) function_decl -> . FUNCTION ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    BEGIN           reduce using rule 2 (declarations -> declaration_list .)
    VAR             shift and go to state 9
    FUNCTION        shift and go to state 11

    declaration                    shift and go to state 14
    function_decl                  shift and go to state 10

state 7

    (3) declarations -> empty .

    BEGIN           reduce using rule 3 (declarations -> empty .)


state 8

    (4) declaration_list -> declaration .

    VAR             reduce using rule 4 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 4 (declaration_list -> declaration .)
    BEGIN           reduce using rule 4 (declaration_list -> declaration .)


state 9

    (6) declaration -> VAR . var_decl_list
    (12) var_decl_list -> . var_decl_list var_decl
    (13) var_decl_list -> . var_decl
    (14) var_decl -> . id_list COLON type SEMICOLON
    (15) id_list -> . ID
    (16) id_list -> . id_list COMMA ID

    ID              shift and go to state 18

    var_decl_list                  shift and go to state 15
    var_decl                       shift and go to state 16
    id_list                        shift and go to state 17

state 10

    (7) declaration -> function_decl .

    VAR             reduce using rule 7 (declaration -> function_decl .)
    FUNCTION        reduce using rule 7 (declaration -> function_decl .)
    BEGIN           reduce using rule 7 (declaration -> function_decl .)


state 11

    (8) function_decl -> FUNCTION . ID LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    ID              shift and go to state 19


state 12

    (1) program -> PROGRAM ID SEMICOLON declarations block . DOT

    DOT             shift and go to state 20


state 13

    (24) block -> BEGIN . statement_list END
    (25) statement_list -> . statement
    (26) statement_list -> . statement_list SEMICOLON statement
    (27) statement -> . assignment
    (28) statement -> . if_statement
    (29) statement -> . while_statement
    (30) statement -> . for_statement
    (31) statement -> . write_statement
    (32) statement -> . read_statement
    (33) statement -> . block
    (34) statement -> . empty
    (35) assignment -> . ID ASSIGN expression
    (36) if_statement -> . IF expression THEN statement
    (37) if_statement -> . IF expression THEN statement ELSE statement
    (38) while_statement -> . WHILE expression DO statement
    (39) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (40) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (41) write_statement -> . WRITE LPAREN write_args RPAREN
    (42) write_statement -> . WRITELN LPAREN write_args RPAREN
    (45) read_statement -> . READLN LPAREN expression RPAREN
    (24) block -> . BEGIN statement_list END
    (78) empty -> .

    ID              shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    WRITE           shift and go to state 35
    WRITELN         shift and go to state 36
    READLN          shift and go to state 37
    BEGIN           shift and go to state 13
    END             reduce using rule 78 (empty -> .)
    SEMICOLON       reduce using rule 78 (empty -> .)

    statement_list                 shift and go to state 21
    statement                      shift and go to state 22
    assignment                     shift and go to state 23
    if_statement                   shift and go to state 24
    while_statement                shift and go to state 25
    for_statement                  shift and go to state 26
    write_statement                shift and go to state 27
    read_statement                 shift and go to state 28
    block                          shift and go to state 29
    empty                          shift and go to state 30

state 14

    (5) declaration_list -> declaration_list declaration .

    VAR             reduce using rule 5 (declaration_list -> declaration_list declaration .)
    FUNCTION        reduce using rule 5 (declaration_list -> declaration_list declaration .)
    BEGIN           reduce using rule 5 (declaration_list -> declaration_list declaration .)


state 15

    (6) declaration -> VAR var_decl_list .
    (12) var_decl_list -> var_decl_list . var_decl
    (14) var_decl -> . id_list COLON type SEMICOLON
    (15) id_list -> . ID
    (16) id_list -> . id_list COMMA ID

    VAR             reduce using rule 6 (declaration -> VAR var_decl_list .)
    FUNCTION        reduce using rule 6 (declaration -> VAR var_decl_list .)
    BEGIN           reduce using rule 6 (declaration -> VAR var_decl_list .)
    ID              shift and go to state 18

    var_decl                       shift and go to state 38
    id_list                        shift and go to state 17

state 16

    (13) var_decl_list -> var_decl .

    ID              reduce using rule 13 (var_decl_list -> var_decl .)
    VAR             reduce using rule 13 (var_decl_list -> var_decl .)
    FUNCTION        reduce using rule 13 (var_decl_list -> var_decl .)
    BEGIN           reduce using rule 13 (var_decl_list -> var_decl .)


state 17

    (14) var_decl -> id_list . COLON type SEMICOLON
    (16) id_list -> id_list . COMMA ID

    COLON           shift and go to state 39
    COMMA           shift and go to state 40


state 18

    (15) id_list -> ID .

    COLON           reduce using rule 15 (id_list -> ID .)
    COMMA           reduce using rule 15 (id_list -> ID .)


state 19

    (8) function_decl -> FUNCTION ID . LPAREN param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON

    LPAREN          shift and go to state 41


state 20

    (1) program -> PROGRAM ID SEMICOLON declarations block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON declarations block DOT .)


state 21

    (24) block -> BEGIN statement_list . END
    (26) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 42
    SEMICOLON       shift and go to state 43


state 22

    (25) statement_list -> statement .

    END             reduce using rule 25 (statement_list -> statement .)
    SEMICOLON       reduce using rule 25 (statement_list -> statement .)


state 23

    (27) statement -> assignment .

    END             reduce using rule 27 (statement -> assignment .)
    SEMICOLON       reduce using rule 27 (statement -> assignment .)
    ELSE            reduce using rule 27 (statement -> assignment .)


state 24

    (28) statement -> if_statement .

    END             reduce using rule 28 (statement -> if_statement .)
    SEMICOLON       reduce using rule 28 (statement -> if_statement .)
    ELSE            reduce using rule 28 (statement -> if_statement .)


state 25

    (29) statement -> while_statement .

    END             reduce using rule 29 (statement -> while_statement .)
    SEMICOLON       reduce using rule 29 (statement -> while_statement .)
    ELSE            reduce using rule 29 (statement -> while_statement .)


state 26

    (30) statement -> for_statement .

    END             reduce using rule 30 (statement -> for_statement .)
    SEMICOLON       reduce using rule 30 (statement -> for_statement .)
    ELSE            reduce using rule 30 (statement -> for_statement .)


state 27

    (31) statement -> write_statement .

    END             reduce using rule 31 (statement -> write_statement .)
    SEMICOLON       reduce using rule 31 (statement -> write_statement .)
    ELSE            reduce using rule 31 (statement -> write_statement .)


state 28

    (32) statement -> read_statement .

    END             reduce using rule 32 (statement -> read_statement .)
    SEMICOLON       reduce using rule 32 (statement -> read_statement .)
    ELSE            reduce using rule 32 (statement -> read_statement .)


state 29

    (33) statement -> block .

    END             reduce using rule 33 (statement -> block .)
    SEMICOLON       reduce using rule 33 (statement -> block .)
    ELSE            reduce using rule 33 (statement -> block .)


state 30

    (34) statement -> empty .

    END             reduce using rule 34 (statement -> empty .)
    SEMICOLON       reduce using rule 34 (statement -> empty .)
    ELSE            reduce using rule 34 (statement -> empty .)


state 31

    (35) assignment -> ID . ASSIGN expression

    ASSIGN          shift and go to state 44


state 32

    (36) if_statement -> IF . expression THEN statement
    (37) if_statement -> IF . expression THEN statement ELSE statement
    (46) expression -> . expression_bool
    (47) expression_bool -> . expression_rel
    (48) expression_bool -> . expression_rel EQ expression_rel
    (49) expression_bool -> . expression_rel NE expression_rel
    (50) expression_bool -> . expression_rel LT expression_rel
    (51) expression_bool -> . expression_rel LE expression_rel
    (52) expression_bool -> . expression_rel GT expression_rel
    (53) expression_bool -> . expression_rel GE expression_rel
    (54) expression_rel -> . expression_add
    (55) expression_rel -> . expression_rel OR expression_add
    (56) expression_add -> . expression_mul
    (57) expression_add -> . expression_add PLUS expression_mul
    (58) expression_add -> . expression_add MINUS expression_mul
    (59) expression_mul -> . expression_factor
    (60) expression_mul -> . expression_mul TIMES expression_factor
    (61) expression_mul -> . expression_mul DIVIDE expression_factor
    (62) expression_mul -> . expression_mul DIV expression_factor
    (63) expression_mul -> . expression_mul MOD expression_factor
    (64) expression_mul -> . expression_mul AND expression_factor
    (65) expression_factor -> . NUMBER
    (66) expression_factor -> . REAL
    (67) expression_factor -> . STRING_LITERAL
    (68) expression_factor -> . TRUE
    (69) expression_factor -> . FALSE
    (70) expression_factor -> . ID
    (71) expression_factor -> . ID LBRACKET expression RBRACKET
    (72) expression_factor -> . ID LPAREN expression_list RPAREN
    (73) expression_factor -> . LPAREN expression RPAREN
    (74) expression_factor -> . MINUS expression_factor
    (75) expression_factor -> . NOT expression_factor

    NUMBER          shift and go to state 52
    REAL            shift and go to state 53
    STRING_LITERAL  shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    ID              shift and go to state 57
    LPAREN          shift and go to state 58
    MINUS           shift and go to state 50
    NOT             shift and go to state 59

    expression                     shift and go to state 45
    expression_bool                shift and go to state 46
    expression_rel                 shift and go to state 47
    expression_add                 shift and go to state 48
    expression_mul                 shift and go to state 49
    expression_factor              shift and go to state 51

state 33

    (38) while_statement -> WHILE . expression DO statement
    (46) expression -> . expression_bool
    (47) expression_bool -> . expression_rel
    (48) expression_bool -> . expression_rel EQ expression_rel
    (49) expression_bool -> . expression_rel NE expression_rel
    (50) expression_bool -> . expression_rel LT expression_rel
    (51) expression_bool -> . expression_rel LE expression_rel
    (52) expression_bool -> . expression_rel GT expression_rel
    (53) expression_bool -> . expression_rel GE expression_rel
    (54) expression_rel -> . expression_add
    (55) expression_rel -> . expression_rel OR expression_add
    (56) expression_add -> . expression_mul
    (57) expression_add -> . expression_add PLUS expression_mul
    (58) expression_add -> . expression_add MINUS expression_mul
    (59) expression_mul -> . expression_factor
    (60) expression_mul -> . expression_mul TIMES expression_factor
    (61) expression_mul -> . expression_mul DIVIDE expression_factor
    (62) expression_mul -> . expression_mul DIV expression_factor
    (63) expression_mul -> . expression_mul MOD expression_factor
    (64) expression_mul -> . expression_mul AND expression_factor
    (65) expression_factor -> . NUMBER
    (66) expression_factor -> . REAL
    (67) expression_factor -> . STRING_LITERAL
    (68) expression_factor -> . TRUE
    (69) expression_factor -> . FALSE
    (70) expression_factor -> . ID
    (71) expression_factor -> . ID LBRACKET expression RBRACKET
    (72) expression_factor -> . ID LPAREN expression_list RPAREN
    (73) expression_factor -> . LPAREN expression RPAREN
    (74) expression_factor -> . MINUS expression_factor
    (75) expression_factor -> . NOT expression_factor

    NUMBER          shift and go to state 52
    REAL            shift and go to state 53
    STRING_LITERAL  shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    ID              shift and go to state 57
    LPAREN          shift and go to state 58
    MINUS           shift and go to state 50
    NOT             shift and go to state 59

    expression                     shift and go to state 60
    expression_bool                shift and go to state 46
    expression_rel                 shift and go to state 47
    expression_add                 shift and go to state 48
    expression_mul                 shift and go to state 49
    expression_factor              shift and go to state 51

state 34

    (39) for_statement -> FOR . ID ASSIGN expression TO expression DO statement
    (40) for_statement -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 61


state 35

    (41) write_statement -> WRITE . LPAREN write_args RPAREN

    LPAREN          shift and go to state 62


state 36

    (42) write_statement -> WRITELN . LPAREN write_args RPAREN

    LPAREN          shift and go to state 63


state 37

    (45) read_statement -> READLN . LPAREN expression RPAREN

    LPAREN          shift and go to state 64


state 38

    (12) var_decl_list -> var_decl_list var_decl .

    ID              reduce using rule 12 (var_decl_list -> var_decl_list var_decl .)
    VAR             reduce using rule 12 (var_decl_list -> var_decl_list var_decl .)
    FUNCTION        reduce using rule 12 (var_decl_list -> var_decl_list var_decl .)
    BEGIN           reduce using rule 12 (var_decl_list -> var_decl_list var_decl .)


state 39

    (14) var_decl -> id_list COLON . type SEMICOLON
    (17) type -> . base_type
    (18) type -> . array_type
    (19) base_type -> . INTEGER
    (20) base_type -> . BOOLEAN
    (21) base_type -> . STRING_TYPE
    (22) base_type -> . REAL_TYPE
    (23) array_type -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF base_type

    INTEGER         shift and go to state 68
    BOOLEAN         shift and go to state 69
    STRING_TYPE     shift and go to state 70
    REAL_TYPE       shift and go to state 71
    ARRAY           shift and go to state 72

    type                           shift and go to state 65
    base_type                      shift and go to state 66
    array_type                     shift and go to state 67

state 40

    (16) id_list -> id_list COMMA . ID

    ID              shift and go to state 73


state 41

    (8) function_decl -> FUNCTION ID LPAREN . param_list RPAREN COLON base_type SEMICOLON declarations block SEMICOLON
    (9) param_list -> . param
    (10) param_list -> . param_list SEMICOLON param
    (11) param -> . id_list COLON type
    (15) id_list -> . ID
    (16) id_list -> . id_list COMMA ID

    ID              shift and go to state 18

    param_list                     shift and go to state 74
    param                          shift and go to state 75
    id_list                        shift and go to state 76

state 42

    (24) block -> BEGIN statement_list END .

    DOT             reduce using rule 24 (block -> BEGIN statement_list END .)
    END             reduce using rule 24 (block -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 24 (block -> BEGIN statement_list END .)
    ELSE            reduce using rule 24 (block -> BEGIN statement_list END .)


state 43

    (26) statement_list -> statement_list SEMICOLON . statement
    (27) statement -> . assignment
    (28) statement -> . if_statement
    (29) statement -> . while_statement
    (30) statement -> . for_statement
    (31) statement -> . write_statement
    (32) statement -> . read_statement
    (33) statement -> . block
    (34) statement -> . empty
    (35) assignment -> . ID ASSIGN expression
    (36) if_statement -> . IF expression THEN statement
    (37) if_statement -> . IF expression THEN statement ELSE statement
    (38) while_statement -> . WHILE expression DO statement
    (39) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (40) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (41) write_statement -> . WRITE LPAREN write_args RPAREN
    (42) write_statement -> . WRITELN LPAREN write_args RPAREN
    (45) read_statement -> . READLN LPAREN expression RPAREN
    (24) block -> . BEGIN statement_list END
    (78) empty -> .

    ID              shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    WRITE           shift and go to state 35
    WRITELN         shift and go to state 36
    READLN          shift and go to state 37
    BEGIN           shift and go to state 13
    END             reduce using rule 78 (empty -> .)
    SEMICOLON       reduce using rule 78 (empty -> .)

    statement                      shift and go to state 77
    assignment                     shift and go to state 23
    if_statement                   shift and go to state 24
    while_statement                shift and go to state 25
    for_statement                  shift and go to state 26
    write_statement                shift and go to state 27
    read_statement                 shift and go to state 28
    block                          shift and go to state 29
    empty                          shift and go to state 30

state 44

    (35) assignment -> ID ASSIGN . expression
    (46) expression -> . expression_bool
    (47) expression_bool -> . expression_rel
    (48) expression_bool -> . expression_rel EQ expression_rel
    (49) expression_bool -> . expression_rel NE expression_rel
    (50) expression_bool -> . expression_rel LT expression_rel
    (51) expression_bool -> . expression_rel LE expression_rel
    (52) expression_bool -> . expression_rel GT expression_rel
    (53) expression_bool -> . expression_rel GE expression_rel
    (54) expression_rel -> . expression_add
    (55) expression_rel -> . expression_rel OR expression_add
    (56) expression_add -> . expression_mul
    (57) expression_add -> . expression_add PLUS expression_mul
    (58) expression_add -> . expression_add MINUS expression_mul
    (59) expression_mul -> . expression_factor
    (60) expression_mul -> . expression_mul TIMES expression_factor
    (61) expression_mul -> . expression_mul DIVIDE expression_factor
    (62) expression_mul -> . expression_mul DIV expression_factor
    (63) expression_mul -> . expression_mul MOD expression_factor
    (64) expression_mul -> . expression_mul AND expression_factor
    (65) expression_factor -> . NUMBER
    (66) expression_factor -> . REAL
    (67) expression_factor -> . STRING_LITERAL
    (68) expression_factor -> . TRUE
    (69) expression_factor -> . FALSE
    (70) expression_factor -> . ID
    (71) expression_factor -> . ID LBRACKET expression RBRACKET
    (72) expression_factor -> . ID LPAREN expression_list RPAREN
    (73) expression_factor -> . LPAREN expression RPAREN
    (74) expression_factor -> . MINUS expression_factor
    (75) expression_factor -> . NOT expression_factor

    NUMBER          shift and go to state 52
    REAL            shift and go to state 53
    STRING_LITERAL  shift and go to state 54
    TRUE            shift and go to state 55
    FALSE           shift and go to state 56
    ID              shift and go to state 57
    LPAREN          shift and go to state 58
    MINUS           shift and go to state 50
    NOT             shift and go to state 59

    expression                     shift and go to state 78
    expression_bool                shift and go to state 46
    expression_rel                 shift and go to state 47
    expression_add                 shift and go to state 48
    expression_mul                 shift and go to state 49
    expression_factor              shift and go to state 51

state 45

    (36) if_statement -> IF expression . THEN statement
    (37) if_statement -> IF expression . THEN statement ELSE statement

    THEN            shift and go to state 79


state 46

    (46) expression -> expression_bool .
